--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+	"name": "task-manager-api",
+	"version": "1.0.0",
+	"main": "server.js",
+	"type": "commonjs",
+	"scripts": {
+	  "start": "node src/server.js"
+	},
 	"dependencies": {
-		"express": "^4.21.2",
-		"mongoose": "^8.9.2",
-		"dotenv": "^16.4.7",
-		"bcryptjs": "^2.4.3",
-		"jsonwebtoken": "^9.0.2",
-		"cors": "^2.8.5"
+	  "dotenv": "^10.0.0",
+	  "express": "^4.17.1",
+	  "mongoose": "^5.12.3",
+	  "cors": "^2.8.5"
 	}
-}
+  }
