--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
 	"main": "server.js",
 	"type": "commonjs",
 	"scripts": {
-	  "start": "node src/server.js"
+		"start": "node src/server.js",
+		"test": "jest"
 	},
 	"dependencies": {
-	  "dotenv": "^10.0.0",
-	  "express": "^4.17.1",
-	  "mongoose": "^5.12.3",
-	  "cors": "^2.8.5"
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.12.3"
+	},
+	"devDependencies": {
+		"jest": "^29.7.0",
+		"supertest": "^7.0.0"
 	}
-  }
+}
