--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
 	"type": "commonjs",
 	"scripts": {
 		"start": "node src/server.js",
-		"test": "jest"
+		"test": "jest",
+		"lint": "eslint",
+		"lint:fix": "eslint . --fix",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
@@ -14,7 +17,13 @@
 		"mongoose": "^5.12.3"
 	},
 	"devDependencies": {
+		"eslint": "^9.17.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
 		"jest": "^29.7.0",
+		"prettier": "^3.4.2",
 		"supertest": "^7.0.0"
 	}
 }
