--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "json-websocket": "^0.1.5",
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
